Change deck id when number of cards are low

--- a/Day8/index.html
+++ b/Day8/index.html
@@ -26,7 +26,7 @@
 
         <div id="playGame">
           <button
-            onClick="playGame()"
+            onClick="drawDeck()"
             type="button"
             class="btn btn-secondary mx-5"
             id="playBtn"
